@@ -314,36 +314,37 @@ SPI NAND Flash Support List:
 061. ATO ATO25D2GB
 062. FM FM25S01
 063. FM FM25S01A
-064. FM FM25G01B
-065. FM FM25G02B
-066. FM FM25G02C
-067. FM FM25G02
-068. XTX XT26G02B
-069. XTX XT26G01C
-070. XTX XT26G02C
-071. XTX XT26G01A
-072. XTX XT26G02A
-073. MIRA PSU1GS20BN
-074. BIWIN BWJX08U
-075. BIWIN BWET08U
-076. FORESEE FS35ND01GD1F1
-077. FORESEE FS35ND01GS1F1
-078. FORESEE FS35ND02GS2F1
-079. FORESEE FS35ND02GD1F1
-080. FORESEE FS35ND01GS1Y2
-081. FORESEE FS35ND02G-S3Y2
-082. FORESEE FS35ND04G-S2Y2
-083. DS DS35Q2GA
-084. DS DS35M2GA
-085. DS DS35Q1GA
-086. DS DS35M1GA
-087. FISON CS11G0T0A0AA
-088. FISON CS11G1T0A0AA
-089. FISON CS11G0G0A0AA
-090. TYM TYM25D2GA01
-091. TYM TYM25D2GA02
-092. TYM TYM25D1GA03
-093. XINCUN XCSP1AAWH-NT
+064. FM FM25S02A
+065. FM FM25G01B
+066. FM FM25G02B
+067. FM FM25G02C
+068. FM FM25G02
+069. XTX XT26G02B
+070. XTX XT26G01C
+071. XTX XT26G02C
+072. XTX XT26G01A
+073. XTX XT26G02A
+074. MIRA PSU1GS20BN
+075. BIWIN BWJX08U
+076. BIWIN BWET08U
+077. FORESEE FS35ND01GD1F1
+078. FORESEE FS35ND01GS1F1
+079. FORESEE FS35ND02GS2F1
+080. FORESEE FS35ND02GD1F1
+081. FORESEE FS35ND01GS1Y2
+082. FORESEE FS35ND02G-S3Y2
+083. FORESEE FS35ND04G-S2Y2
+084. DS DS35Q2GA
+085. DS DS35M2GA
+086. DS DS35Q1GA
+087. DS DS35M1GA
+088. FISON CS11G0T0A0AA
+089. FISON CS11G1T0A0AA
+090. FISON CS11G0G0A0AA
+091. TYM TYM25D2GA01
+092. TYM TYM25D2GA02
+093. TYM TYM25D1GA03
+094. XINCUN XCSP1AAWH-NT
 
 SPI NOR Flash Support List:
 001. AT26DF161
